# incolume.py.changelog

./: .editorconfig  .gitignore  404.html  CHANGELOG.md  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.git-hooks/: commit-msg  pre-commit  pre-push  prepare-commit-msg
.github/workflows/: docs_ci_cd.yml  multplatform-ci-cd.yml  python-package.yml  unit-tests.yml
about/CHANGELOG/: index.html
about/CONTRIBUTORS/: index.html
about/LICENSE/: index.html
api/: index.html
de/: index.html
de/about/CHANGELOG/: index.html
de/about/CONTRIBUTORS/: index.html
de/about/LICENSE/: index.html
de/api/: index.html
de/user_guide/COVENTIONAL_COMMITS/: index.html
de/user_guide/code_of_conduct/: index.html
de/user_guide/development/: index.html
de/user_guide/keep-a-changelog/: index.html
de/user_guide/markdown/: index.html
de/user_guide/semver/: index.html
de/user_guide/writing-your-docs/: index.html
de/user_guide/zenpy/: index.html
docs/: COMMITS.md  CONTRIBUTORS.rst  EXAMPLES.rst  HISTORY.rst  api.rst  index.md  index.rst
docs/about/: CHANGELOG.md  CONTRIBUTORS.de.md  CONTRIBUTORS.en.md  CONTRIBUTORS.es.md  CONTRIBUTORS.fr.md  CONTRIBUTORS.it.md  CONTRIBUTORS.md
docs/api/: index.md
docs/user_guide/: COVENTIONAL_COMMITS.de.md  COVENTIONAL_COMMITS.es.md  COVENTIONAL_COMMITS.fr.md  COVENTIONAL_COMMITS.it.md  COVENTIONAL_COMMITS.md  code_of_conduct.de.md  code_of_conduct.en.md  code_of_conduct.es.md  code_of_conduct.fr.md  code_of_conduct.it.md  development.md  markdown.md  semver.de.md  semver.en.md  semver.es.md  semver.fr.md  semver.it.md  semver.md  writing-your-docs.de.md  writing-your-docs.es.md  writing-your-docs.fr.md  writing-your-docs.it.md  writing-your-docs.md  zenpy.de.md  zenpy.en.md  zenpy.es.md  zenpy.fr.md  zenpy.it.md
en/: index.html
en/about/CHANGELOG/: index.html
en/about/CONTRIBUTORS/: index.html
en/about/LICENSE/: index.html
en/api/: index.html
en/user_guide/COVENTIONAL_COMMITS/: index.html
en/user_guide/INSTALLATION/: index.html
en/user_guide/code_of_conduct/: index.html
en/user_guide/development/: index.html
en/user_guide/keep-a-changelog/: index.html
en/user_guide/markdown/: index.html
en/user_guide/semver/: index.html
en/user_guide/usage/: index.html
en/user_guide/writing-your-docs/: index.html
en/user_guide/zenpy/: index.html
es/: index.html
es/about/CHANGELOG/: index.html
es/about/CONTRIBUTORS/: index.html
es/about/LICENSE/: index.html
es/api/: index.html
es/user_guide/COVENTIONAL_COMMITS/: index.html
es/user_guide/code_of_conduct/: index.html
es/user_guide/development/: index.html
es/user_guide/keep-a-changelog/: index.html
es/user_guide/markdown/: index.html
es/user_guide/semver/: index.html
es/user_guide/writing-your-docs/: index.html
es/user_guide/zenpy/: index.html
fr/: index.html
fr/about/CHANGELOG/: index.html
fr/about/CONTRIBUTORS/: index.html
fr/about/LICENSE/: index.html
fr/api/: index.html
fr/user_guide/COVENTIONAL_COMMITS/: index.html
fr/user_guide/code_of_conduct/: index.html
fr/user_guide/development/: index.html
fr/user_guide/keep-a-changelog/: index.html
fr/user_guide/markdown/: index.html
fr/user_guide/semver/: index.html
fr/user_guide/writing-your-docs/: index.html
fr/user_guide/zenpy/: index.html
incolume/py/changelog/: __init__.py  changelog.py  cli.py  version.txt
it/: index.html
it/about/CHANGELOG/: index.html
it/about/CONTRIBUTORS/: index.html
it/about/LICENSE/: index.html
it/api/: index.html
it/user_guide/COVENTIONAL_COMMITS/: index.html
it/user_guide/code_of_conduct/: index.html
it/user_guide/development/: index.html
it/user_guide/keep-a-changelog/: index.html
it/user_guide/markdown/: index.html
it/user_guide/semver/: index.html
it/user_guide/writing-your-docs/: index.html
it/user_guide/zenpy/: index.html
search/: search_index.json
tests/: __init__.py  conftest.py  test_changelog.py  test_changelog_changelog.py  test_changelog_init.py  test_cli.py  test_examples_pytest.py  test_package.py  test_semver.py
user_guide/COVENTIONAL_COMMITS/: index.html
user_guide/INSTALLATION/: index.html
user_guide/code_of_conduct/: index.html
user_guide/development/: index.html
user_guide/keep-a-changelog/: index.html
user_guide/markdown/: index.html
user_guide/semver/: index.html
user_guide/usage/: index.html
user_guide/writing-your-docs/: index.html
user_guide/zenpy/: index.html
